<resources>
    <string name="app_name">西林教务</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- 公用字符串资源 -->
    <string name="loading">请稍后...</string>
    <string name="OK">确定</string>
    <string name="cancel">取消</string>
    <string name="getDataFail">获取数据失败</string>
    <string name="ge">个</string>
    <string name="download">下载</string>

    <!-- activity fragment 标签-->
    <string name="login_activity_lab">登录</string>
    <string name="main_activity_lab">主页</string>

    <!-- 登录界面的字符资源-->
    <string name="login_userId_hint">学号</string>
    <string name="login_userPass_hint">密码</string>
    <string name="login_btn_text">登录</string>

    <!-- 抽屉导航的选项标签字符串-->
    <string name="draw_item_home">主页</string>
    <string name="draw_item_active">活动</string>
    <string name="draw_item_teachEvaluate">评教</string>
    <string name="draw_item_information">信息维护</string>
    <string name="draw_item_informationQur">信息查询</string>
    <string name="draw_item_publicInfo">公用信息</string>
    <string name="draw_item_setting">设置</string>

    <!-- toolbar的menu的item字符串资源-->
    <string name="toolbar_item_logout">退出登录</string>
    <string name="toolbar_item_about">关于</string>

    <!-- 个人中心 -->
    <string name="myCenter_title">个人中心</string>
    <string name="myCenter_dec">简介:</string>
    <string name="myCenter_resetPassword">重置密码</string>
    <string name="myCenter_modify_information">编辑个人信息</string>
    <string name="myCenter_studentId">学号:</string>
    <string name="myCenter_name">姓名:</string>
    <string name="myCenter_sex">性别:</string>
    <string name="myCenter_age">年龄:</string>
    <string name="myCenter_professional">专业:</string>
    <string name="myCenter_level">年级:</string>
    <string name="myCenter_old_pass">旧密码</string>
    <string name="myCenter_new_pass">新密码</string>
    <string name="myCenter_new_pass_reInput">再次输入新密码</string>
    <string name="myCenter_updatePass_dialog_title">修改密码</string>
    <string name="myCenter_toast_old_pass_isNull">请输入旧密码</string>
    <string name="myCenter_toast_new_pass_isNull">请输入新密码</string>
    <string name="myCenter_toast_new_pass_reInput_isNull">请再次输入新密码</string>
    <string name="myCenter_toast_pass_check_noPass">两次输入密码不一致</string>

    <!--选课Activity-->
    <string name="select_course_title">选课</string>
    <string name="select_course_commit">提交选课结果</string>
    <string name="select_course_clear">清除选课结果</string>
    <string name="select_course_look">查看已选课程</string>
    <string name="select_course_look_dialog_title">已选课程</string>
    <string name="select_course_unChoose">退选</string>
    <string name="select_course_course_name">课程名称：</string>
    <string name="select_course_course_teacher">任课教师：</string>
    <string name="select_course_no_select_course">你还没有选课</string>
    <string name="select_course_no_selected_course">你还没有选过课</string>

    <!-- 课表fragment-->
    <string name="course_table_monday">星期一</string>
    <string name="course_table_tuesday">星期二</string>
    <string name="course_table_wednesday">星期三</string>
    <string name="course_table_thursday">星期四</string>
    <string name="course_table_friday">星期五</string>
    <string name="course_table_saturday">星期六</string>
    <string name="course_table_sunday">星期天</string>

    <!-- 查询界面 -->
    <string name="info_query_queryScore">成绩查询</string>

    <!-- 成绩查询activity -->
    <string name="activity_query_score_lable">成绩</string>

    <!-- 公告明细activity -->
    <string name="activity_notify_detail_file">附件</string>

</resources>
