<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_studentId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_userId_hint">
        <EditText
            android:id="@+id/et_studentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_studentPass"
        android:layout_below="@id/input_studentId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_comp_margin"
        android:hint="@string/login_userPass_hint">
        <EditText
            android:id="@+id/et_studentPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_studentPass"
        android:background="@color/color_btn_green"
        android:layout_marginTop="@dimen/activity_vertical_comp_margin"
        style="@style/txt_size_middle_black"
        android:text="@string/login_btn_text"/>
</RelativeLayout>