<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_comp_margin"
        android:layout_marginRight="@dimen/activity_horizontal_comp_margin"
        android:layout_marginTop="@dimen/activity_vertical_comp_margin"
        android:layout_marginBottom="@dimen/activity_vertical_comp_margin"
        android:hint="@string/myCenter_old_pass">

        <EditText
            android:id="@+id/et_old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_comp_margin"
        android:layout_marginRight="@dimen/activity_horizontal_comp_margin"
        android:layout_marginTop="@dimen/activity_vertical_comp_margin"
        android:layout_marginBottom="@dimen/activity_vertical_comp_margin"
        android:hint="@string/myCenter_new_pass">

        <EditText
            android:id="@+id/et_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_comp_margin"
        android:layout_marginRight="@dimen/activity_horizontal_comp_margin"
        android:layout_marginTop="@dimen/activity_vertical_comp_margin"
        android:layout_marginBottom="@dimen/activity_vertical_comp_margin"
        android:hint="@string/myCenter_new_pass_reInput">

        <EditText
            android:id="@+id/et_new_pass_reInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>