<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/myCenter_header_layout_height">

                <ImageView
                    android:id="@+id/iv_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/colorAccent"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_header"
                    android:layout_width="@dimen/myCenter_imageView_header_width"
                    android:layout_height="@dimen/myCenter_imageView_header_height"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="@dimen/myCenter_header_layout_vertical_padding"
                    android:src="@mipmap/header_default"/>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/tv_studentId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_comp_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_comp_margin"
                    style="@style/txt_size_middle_black"
                    android:layout_weight="1"
                    android:text="学号： 20121151046"/>
                <TextView
                    android:layout_width="@dimen/divider"
                    android:layout_height="match_parent"
                    android:background="@color/color_divider"/>
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_comp_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_comp_margin"
                    android:gravity="center"
                    style="@style/txt_size_middle_black"
                    android:layout_weight="1"
                    android:text="姓名：张三"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:background="@color/color_divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/tv_sex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_comp_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_comp_margin"
                    style="@style/txt_size_middle_black"
                    android:layout_weight="1"
                    android:text="性别： 男"/>
                <TextView
                    android:layout_width="@dimen/divider"
                    android:layout_height="match_parent"
                    android:background="@color/color_divider"/>
                <TextView
                    android:id="@+id/tv_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_comp_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_comp_margin"
                    style="@style/txt_size_middle_black"
                    android:layout_weight="1"
                    android:text="年龄：21"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:background="@color/color_divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/tv_professional"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_comp_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_comp_margin"
                    style="@style/txt_size_middle_black"
                    android:layout_weight="1"
                    android:text="专业： 电子信息工程"/>
                <TextView
                    android:layout_width="@dimen/divider"
                    android:layout_height="match_parent"
                    android:background="@color/color_divider"/>
                <TextView
                    android:id="@+id/tv_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_comp_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_comp_margin"
                    android:gravity="center"
                    style="@style/txt_size_middle_black"
                    android:layout_weight="1"
                    android:text="年级：2012"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:background="@color/color_divider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_comp_margin"
                style="@style/txt_size_middle_black"
                android:text="@string/myCenter_dec"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/myCenter_et_dec_height"
                android:background="@color/color_myCenter_dec_background"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_comp_margin">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/txt_size_middle_black"
                    android:id="@+id/et_dec"
                    android:layout_margin="@dimen/activity_horizontal_comp_margin"
                    android:background="@null"
                    android:enabled="false"
                    android:gravity="left|top"
                    android:text="个人简介\n\n\n\n\n\n"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_resetPassword"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/myCenter_resetPassword"/>

        <Button
            android:id="@+id/btn_modify_information"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/myCenter_modify_information"/>
    </LinearLayout>

</RelativeLayout>